Fix spacing of tags

--- a/src/css/simulations.css
+++ b/src/css/simulations.css
@@ -55,5 +55,6 @@ h1 {
 
 .tag {
 	display: inline;
+	padding: 0 2px;
 }
 
